--- a/MyShader/MyShader.vcxproj
+++ b/MyShader/MyShader.vcxproj
@@ -129,17 +129,22 @@
   <ItemGroup>
     <ClCompile Include="src\head\shader.cpp" />
     <ClCompile Include="src\head\std_image.cpp" />
+    <ClCompile Include="src\head\Texture.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\head\window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\head\shader.h" />
     <ClInclude Include="src\head\stb_image.h" />
+    <ClInclude Include="src\head\Texture.h" />
     <ClInclude Include="src\head\window.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaderLib\fragment.glsl" />
     <None Include="src\shaderLib\vertex.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="src\texture\test.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
