--- a/MyShader/MyShader.vcxproj
+++ b/MyShader/MyShader.vcxproj
@@ -168,6 +168,7 @@
     <None Include="src\shaderLib\normalDisplayF.glsl" />
     <None Include="src\shaderLib\normalDisplayG.glsl" />
     <None Include="src\shaderLib\normalDisplayV.glsl" />
+    <None Include="src\shaderLib\PCSSF.glsl" />
     <None Include="src\shaderLib\shadowMapF.glsl" />
     <None Include="src\shaderLib\shadowMapV.glsl" />
     <None Include="src\shaderLib\vertex.glsl" />
